src/app.css
/* ... */
.flex-2 {
	flex: 2
}

.flex-3 {
	flex: 3
}

.flex-reactive {
	display: flex;
	flex-direction: column;
}

@media screen and (min-width: 500px) {
	.flex-reactive {
		flex-direction: row;
	}
}

/*****************************************************
******************************************************
	SIZING RULES
******************************************************
*****************************************************/

.width-100 {
	width: 100%;
	max-width: 100%;
}

.width-90 {
	width: 100%;
	max-width: 90%;
}

.width-80 {
	width: 100%;
	max-width: 80%;
}

.width-75 {
	width: 100%;
	max-width: 75%;
}

.width-70 {
	width: 100%;
	max-width: 70%;
}

.width-60 {
	width: 100%;
	max-width: 60%;
}

.width-50 {
	width: 100%;
	max-width: 50%;
}

.width-40 {
	width: 100%;
	max-width: 40%;
}

.width-30 {
	width: 100%;
	max-width: 30%;
}

.width-25 {
	width: 100%;
	max-width: 25%;
}

.width-20 {
	width: 100%;
	max-width: 20%;
}

.max-width--desktop {
	max-width: 1400px;
}

.max-width--tablet {
	max-width: 800px;
}

.max-width--mobile {
	max-width: 500px;
}

/*****************************************************
******************************************************
	PADDING RULES
******************************************************
*****************************************************/

.squeeze-8 {
	padding-left: var(--spacing-8);
	padding-right: var(--spacing-8);
}

.squeeze-16 {
	padding-right: var(--spacing-16);
	padding-left: var(--spacing-16);
}

.squeeze-24 {
	padding-left: var(--spacing-24);
	padding-right: var(--spacing-24);
}

.squeeze-32 {
	padding-left: var(--spacing-32);
	padding-right: var(--spacing-32);
}

.squeeze-48 {
	padding-left: var(--spacing-48);
	padding-right: var(--spacing-48);
}

.squish-8 {
	padding-top: var(--spacing-8);
	padding-bottom: var(--spacing-8);
}

.squish-16 {
	padding-top: var(--spacing-16);
	padding-bottom: var(--spacing-16);
}

.squish-24 {
	padding-top: var(--spacing-24);
	padding-bottom: var(--spacing-24);
}

.squish-32 {
	padding-top: var(--spacing-32);
	padding-bottom: var(--spacing-32);
}

.squish-48 {
	padding-top: var(--spacing-48);
	padding-bottom: var(--spacing-48);
}

/*****************************************************
******************************************************
	SPACING RULES
******************************************************
*****************************************************/

.drop-8 {
	margin-top: var(--spacing-8);
}

.drop-16 {
	margin-top: var(--spacing-16);
}

.drop-24 {
	margin-top: var(--spacing-24);
}

.drop-32 {
	margin-top: var(--spacing-32);
}

.stack-8 {
	margin-bottom: var(--spacing-8);
}

.stack-16 {
	margin-bottom: var(--spacing-16);
}

.stack-24 {
	margin-bottom: var(--spacing-24);
}

.stack-32 {
	margin-bottom: var(--spacing-32)
}

.stack-48 {
	margin-bottom: var(--spacing-48);
}

.spread-8 {
	margin-right: var(--spacing-8);
}

.spread-16 {
	margin-right: var(--spacing-16);
}

.spread-24 {
	margin-right: var(--spacing-24);
}

.spread-32 {
	margin-right: var(--spacing-32);
}

.spread-48 {
	margin-right: var(--spacing-48);
}

.push-8 {
	margin-left: var(--spacing-8);
}

.push-16 {
	margin-left: var(--spacing-16);
}

.push-24 {
	margin-left: var(--spacing-24);
}

.push-32 {
	margin-left: var(--spacing-32);
}

.push-48 {
	margin-left: var(--spacing-48);
}

.gap-8 {
	grid-gap: var(--spacing-8);
	gap: var(--spacing-8);
}

.gap-16 {
	grid-gap: var(--spacing-16);
	gap: var(--spacing-16);
}

.gap-24 {
	grid-gap: var(--spacing-24);
	gap: var(--spacing-24);
}

.space-between {
	justify-content: space-between;
}

.align-center {
	align-items: center;
}

.align-baseline {
	align-items: baseline;
}

.align-first-baseline {
	align-items: first baseline;
}

.align-content-start {
	align-content: start;
}

.align-content-end {
	align-content: end;
}

.align-start {
	align-items: start;
}

.align-items-end {
	align-items: end;
}

.justify-items-end {
	justify-items: end;
}

.justify-items-start {
	justify-items: start;
}

.justify-content-end {
	justify-content: end;
}

.justify-content-start {
	justify-content: start;
}

.float-left {
	float: left;
}

.float-right {
	float: right;
}

.text-align-center {
	text-align: center;
}

.margin-x--auto {
	position: relative;
	margin-right: auto;
	margin-left: auto;
}

/*****************************************************
******************************************************
	TEXT RULES
******************************************************
*****************************************************/

.text-huge {
	font-size: var(--text-huge);
}

.text-large {
	font-size: var(--text-large);
}

.text-normal {
	font-size: var(--text-normal);
}

.text-small {
	font-size: var(--text-small);
}

.text-strong {
	font-weight: bold;
}

.text-medium {
	font-weight: normal;
}

.text-thin {
	font-weight: lighter;
}

.text-style-metadata {
	color: var(--color-metadata);
}

.text-style-italic {
	font-style: italic;
}

.height-huge {
	line-height: var(--height-huge);
}

.height-large {
	line-height: var(--height-large);
}

.height-normal {
	line-height: var(--height-normal);
}

.height-small {
	line-height: var(--height-small);
}

.font-color-primary {
	color: var(--heading-color)
}

.hover-decoration-none:hover {
	text-decoration: none;
}

/*****************************************************
******************************************************
	PERIMETER RULES
******************************************************
*****************************************************/

.border-bottom--square {
	border-bottom-left-radius: 0 !important;
	border-bottom-right-radius: 0 !important;
}

.border-top--square {
	border-top-left-radius: 0 !important;
	border-top-right-radius: 0 !important;
}

.border-left--square {
	border-bottom-left-radius: 0;
	border-top-left-radius: 0;
}

.border-right--square {
	border-bottom-right-radius: 0;
	border-top-right-radius: 0;
}

.border--square {
	border-radius: 0 !important;
}

.border--rounded-8 {
	border-radius: var(--spacing-8);
}
/* ... */

